tests/fails/f41.t
local a = {}
terra foo()
  return  a + 20
end
foo()